--- a/src/App.scss
+++ b/src/App.scss
@@ -21,16 +21,16 @@
             cursor: pointer;
             transition: color .2s;
         }
-        .sr-only {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            margin: -1px;
-            padding: 0;
-            overflow: hidden;
-            clip: rect(0,0,0,0);
-            border: 0;
-        }
+        // .sr-only {
+        //     position: absolute;
+        //     width: 1px;
+        //     height: 1px;
+        //     margin: -1px;
+        //     padding: 0;
+        //     overflow: hidden;
+        //     clip: rect(0,0,0,0);
+        //     border: 0;
+        // }
         .btn-collapse {
             width: 100%;
             height: 100%;
