--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,7 @@
                 .sub-filter-links {
                     padding-left: 15px;
                     padding-top: 10px;
+                    display: none;
                     li a {
                         font-size: 15px;
                         font-family: HurmeGeometricSans1-Light;
@@ -95,6 +96,12 @@
                     li ul li a {
                         font-size: 14px;
                     }
+                }
+                .room.active ~ .sub-filter-links {
+                    display: block;
+                }
+                .life-style.active ~ .sub-filter-links {
+                    display: block;
                 }
             }
             .checkbox a.active {
